styling vending machine component

--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,10 @@
 .Navbar {
   background-color: #0d7200;
   color: #81ffab;
-  height: 2rem;
+  height: 3rem;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   font-size: 1.2rem;
 }
 
